[Sema] Substitute associatedtype superclass requirements into the conformance when checking witnesses.

A requirement like `associatedtype X: Generic<Self>` needs to have `Self`
substituted to `Concrete` when checking that it is satisfied by a potential
witness.

Fixes SR-8028, SR-8247.